<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jobTitleTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/nameTil"
        app:layout_constraintStart_toStartOf="@+id/nameTil"
        app:layout_constraintTop_toBottomOf="@id/nameTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/job_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jobTitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/nameTil"
        app:layout_constraintStart_toStartOf="@+id/nameTil"
        app:layout_constraintTop_toBottomOf="@id/jobTitleTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/genderLabelTv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="@+id/nameTil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameTil"
        app:layout_constraintTop_toBottomOf="@id/ageTil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/genderRadGrp"
        app:layout_constraintEnd_toEndOf="@+id/nameTil"
        app:layout_constraintStart_toStartOf="@+id/nameTil"
        app:layout_constraintTop_toBottomOf="@id/genderLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/maleRadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/femaleRadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/female"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveUserBtn"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/showUsersBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadGrp"
        app:layout_constraintVertical_bias="0.120000005"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showUsersBtn"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/saveUserBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveUserBtn"
        app:layout_constraintTop_toTopOf="@+id/saveUserBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/show" />

</androidx.constraintlayout.widget.ConstraintLayout>