<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    app:cardElevation="5dp"
    style="@style/Widget.MaterialComponents.CardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/nameLabelTv"
            app:layout_constraintTop_toTopOf="@id/nameLabelTv"
            app:layout_constraintBottom_toBottomOf="@id/nameLabelTv"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/jobTitleLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/job_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLabelTv"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/jobTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/age"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/jobTitleLabelTv"
            app:layout_constraintTop_toTopOf="@id/jobTitleLabelTv"
            app:layout_constraintBottom_toBottomOf="@id/jobTitleLabelTv"/>

        <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ageLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTitleLabelTv"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/age"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/ageLabelTv"
            app:layout_constraintTop_toTopOf="@id/ageLabelTv"
            app:layout_constraintBottom_toBottomOf="@id/ageLabelTv"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genderLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ageLabelTv"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gender"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/genderLabelTv"
            app:layout_constraintTop_toTopOf="@id/genderLabelTv"
            app:layout_constraintBottom_toBottomOf="@id/genderLabelTv"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>